tests/snapshots/wallets/derive_next_miner_addresses/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - derive-next-miner-addresses
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
